--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "bootstrap": "4.1.1",
+    "bootstrap": "^4.1.1",
+    "forms-angular": "^0.12.0-beta.55",
     "ngx-bootstrap": "^5.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
